Fix visible bugs

--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -110,7 +110,19 @@
     color: #fff;
     text-align: center;
     margin: 0;
-    font-size: 190px;
+    font-size: 74px;
+
+    @include for-sm {
+      font-size: 100px;
+    }
+
+    @include for-md {
+      font-size: 160px;
+    }
+
+    @include for-xl {
+      font-size: 190px;
+    }
   }
 
   p {
