--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -16,14 +16,13 @@
     opacity: 0.5;
     transition: .5s ease-in-out;
     border-radius: 15px;
-    border: 1px solid transparent;
+    border: 1px solid #fff;
     padding: 5px 10px;
 
     &:hover {
       opacity: 1;
       transform: translateY(-5px);
       box-shadow: 0 10px 30px 4px $color-secondary;
-      border-color: #fff;
     }
 
     &.router-link-active {
